# ROS-PLM4MR-1

./: Guida.txt  Guida_ROS-PLM4MR-1.txt  README.md  frames.gv
GucciStore/: 2021-04-19-22-29-06.bag
src/msg_filter/: CMakeLists.txt  package.xml
src/msg_filter/include/: msg_filter.h
src/msg_filter/launch/: eliminare.launch  launcher.launch
src/msg_filter/msg/: SpeedAndOdom.msg
src/msg_filter/src/: msg_filter.cpp  msg_filter_sub.cpp
src/odometry/: CMakeLists.txt  package.xml
src/odometry/cfg/: parameters.cfg
src/odometry/include/: PubSubNode.h  odometry.h
src/odometry/launch/: launcher.launch  parameters.yaml
src/odometry/src/: odometry.cpp
src/odometry/srv/: setResetOdom.srv
src/param_estimation/: CMakeLists.txt  initial_gtPOSE  initial_scoutODOM  package.xml
src/param_estimation/include/: param_estimation.h
src/param_estimation/launch/: launcher.launch  parameters.yaml  parameters_bag2.yaml  parameters_bag3.yaml
src/param_estimation/msg/: Estimation.msg
src/param_estimation/scripts/: y0_Tratio_est.py  y0_estOpt.py  y0_estOpt_v02.py
src/param_estimation/src/: param_estimation.cpp
src/param_handling/: CMakeLists.txt  package.xml
src/param_handling/cfg/: parameters.cfg
src/param_handling/include/: param_estimation.h
src/param_handling/launch/: launcher.launch  parameters.yaml
src/param_handling/src/: param_estimation.cpp  param_handler.cpp  set_reset_odometry.cpp
src/robotics_hw1/: CMakeLists.txt
src/scout_visualizer/: CMakeLists.txt  package.xml
src/scout_visualizer/include/: scout_visualizer.h  scout_visualizerOLD.h
src/scout_visualizer/launch/: .launcher_bag1.launch.swp  launcher3D.launch  launcher_bag1.launch  launcher_bag2.launch  launcher_bag3.launch  parameters_bag1.yaml  parameters_bag2.yaml  (+1 more)
(+7 files in other folders)
